--- a/projects.html
+++ b/projects.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Astuti Kumari - Portfolio</title>
+    <title>Astuti Kumari - Projects</title>
 </head>
 <body>
     <header>
@@ -24,5 +24,10 @@
                 <a href="contact.html">Contact</a>
                    </nav>
     </header>
+
+    <section id="projects">
+        <h2>Projects</h2>
+        <p>Details about your projects.</p>
+    </section>
 </body>
 </html>
