--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Astuti Kumari - Portfolio</title>
+    <title>About Astuti Kumari</title>
 </head>
 <body>
     <header>
@@ -24,5 +24,10 @@
                 <a href="contact.html">Contact</a>
                    </nav>
     </header>
+
+    <section id="about">
+        <h2>Hey, ASTUTI WELCOMES YOU</h2>
+        <p>I am Astuti Kumari, a 17-year-old B.Tech student majoring in Computer Science and Technology at IEM Newtown, under UEM Kolkata. My passion lies in lifelong learning. Let's connect and collaborate.</p>
+    </section>
 </body>
 </html>
