--- a/courses.html
+++ b/courses.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Astuti Kumari - Portfolio</title>
+    <title>Astuti Kumari - Courses</title>
 </head>
 <body>
     <header>
@@ -22,7 +22,12 @@
                 <a href="presentations.html">Presentations</a>
                 <a href="courses.html">Courses</a>
                 <a href="contact.html">Contact</a>
-                   </nav>
+                    </nav>
     </header>
+
+    <section id="courses">
+        <h2>Courses Completed</h2>
+        <p>List of courses.</p>
+    </section>
 </body>
 </html>
