--- a/membership.html
+++ b/membership.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Astuti Kumari - Portfolio</title>
+    <title>Astuti Kumari - Membership</title>
 </head>
 <body>
     <header>
         <h1>Astuti Kumari</h1>
         <nav>
-                           <a href="about.html">About Me</a>
+                          <a href="about.html">About Me</a>
                 <a href="education.html">Educational Background</a>
                 <a href="experience.html">Experience</a>
                 <a href="publications.html">Publications</a>
@@ -24,5 +24,10 @@
                 <a href="contact.html">Contact</a>
                    </nav>
     </header>
+
+    <section id="membership">
+        <h2>Membership</h2>
+        <p>Your memberships in organizations.</p>
+    </section>
 </body>
 </html>
