--- a/publications.html
+++ b/publications.html
@@ -1,16 +1,16 @@
-<!DOCTYPE html>
+w<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Astuti Kumari - Portfolio</title>
+    <title>Astuti Kumari - Publications</title>
 </head>
 <body>
     <header>
         <h1>Astuti Kumari</h1>
         <nav>
-                           <a href="about.html">About Me</a>
+                          <a href="about.html">About Me</a>
                 <a href="education.html">Educational Background</a>
                 <a href="experience.html">Experience</a>
                 <a href="publications.html">Publications</a>
@@ -22,7 +22,12 @@
                 <a href="presentations.html">Presentations</a>
                 <a href="courses.html">Courses</a>
                 <a href="contact.html">Contact</a>
-                   </nav>
+                    </nav>
     </header>
+
+    <section id="publications">
+        <h2>Paper/Patent Publications</h2>
+        <p>List of your publications.</p>
+    </section>
 </body>
 </html>
