--- a/presentations.html
+++ b/presentations.html
@@ -4,30 +4,42 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Astuti Kumari - Presentations</title>
+    <title>Unmilan Das - Presentations</title>
 </head>
 <body>
     <header>
-        <h1>Astuti Kumari</h1>
+        <h1>Unmilan Das</h1>
         <nav>
-                <a href="about.html">About Me</a>
-                <a href="education.html">Educational Background</a>
-                <a href="experience.html">Experience</a>
-                <a href="publications.html">Publications</a>
-                <a href="awards.html">Awards</a>
-                <a href="projects.html">Projects</a>
-                <a href="membership.html">Membership</a>
-                <a href="research.html">Research</a>
-                <a href="events.html">Events</a>
-                <a href="presentations.html">Presentations</a>
-                <a href="courses.html">Courses</a>
-                <a href="contact.html">Contact</a>
-                </nav>
+            <a href="about.html">About Me</a>
+            <a href="education.html">Educational Background</a>
+            <a href="experience.html">Experience</a>
+            <a href="publications.html">Publications</a>
+            <a href="awards.html">Awards</a>
+            <a href="projects.html">Projects</a>
+            <a href="membership.html">Membership</a>
+            <a href="research.html">Research</a>
+            <a href="events.html">Events</a>
+            <a href="presentations.html">Presentations</a>
+            <a href="courses.html">Courses</a>
+            <a href="contact.html">Contact</a>
+        </nav>
     </header>
 
     <section id="presentations">
-        <h2>Poster/Paper Presentation</h2>
-        <p>Your presentation details.</p>
+        <h2>Presentations</h2>
+        
+        <div class="presentation">
+            <h3>Poster</h3>
+            <p>Application of Artificial Intelligence in Gene Regulation</p>
+            <img src="poster.jpg" alt="Poster in Application of Artificial Intelligence in Gene Regulation" />
+        </div>
+
+        <div class="presentation">
+            <h3>Flyer</h3>
+            <p>AI in Medical Science in Gene Regulation</p>
+            <img src="flyer.jpg" alt="Flyer in AI in Medical Science in Gene Regulation" />
+        </div>
+        
     </section>
 </body>
 </html>
