--- a/contact.html
+++ b/contact.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Astuti Kumari - Contact</title>
+    <title>Unmilan Das - Contact</title>
 </head>
 <body>
     <header>
-        <h1>Astuti Kumari</h1>
+        <h1>Unmilan Das</h1>
         <nav>
             <a href="about.html">About Me</a>
             <a href="education.html">Educational Background</a>
@@ -29,14 +29,14 @@
         <h2>Contact Me</h2>
         <p>Feel free to reach out to me through the following channels:</p>
         <ul>
-            <li>Email: <a href="mailto:your-email@example.com">your-email@example.com</a></li>
-            <li>Phone: +1234567890</li>
+            <li>Email: <a href="mailto:unmidas06@gmail.com">unmidas06@gmail.com</a></li>
+            <li>Phone: +919330129628</li>
             <li>LinkedIn: <a href="https://www.linkedin.com/in/your-profile" target="_blank">Your LinkedIn Profile</a></li>
         </ul>
     </section>
 
     <footer>
-        <p>&copy; 2024 Astuti Kumari</p>
+        <p>&copy; 2024 Unmilan Das</p>
     </footer>
 </body>
 </html>
