--- a/about.html
+++ b/about.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>About Astuti Kumari</title>
+    <title>About Unmilan Das</title>
 </head>
 <body>
     <header>
-        <h1>Astuti Kumari</h1>
+        <h1>Unmilan Das</h1>
         <nav>
                            <a href="about.html">About Me</a>
                 <a href="education.html">Educational Background</a>
@@ -26,8 +26,8 @@
     </header>
 
     <section id="about">
-        <h2>Hey, ASTUTI WELCOMES YOU</h2>
-        <p>I am Astuti Kumari, a 17-year-old B.Tech student majoring in Computer Science and Technology at IEM Newtown, under UEM Kolkata. My passion lies in lifelong learning. Let's connect and collaborate.</p>
+        <h2>Hey, UNMILAN WELCOMES YOU</h2>
+        <p>I am Unmilan Das, a 18-year-old B.Tech student majoring in Computer Science and Technology at IEM Newtown, under UEM Kolkata. My passion lies in lifelong learning. Let's connect and collaborate.</p>
     </section>
 </body>
 </html>
