--- a/awards.html
+++ b/awards.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Astuti Kumari - Awards</title>
+    <title>Unmilan Das - Awards</title>
 </head>
 <body>
     <header>
-        <h1>Astuti Kumari</h1>
+        <h1>Unmilan Das</h1>
         <nav>
                            <a href="about.html">About Me</a>
                 <a href="education.html">Educational Background</a>
@@ -27,7 +27,7 @@
 
     <section id="awards">
         <h2>Awards and Achievements</h2>
-        <p>Your awards and achievements.</p>
+        <p>silver medel in mathematics olympiad in school level</p>
     </section>
 </body>
 </html>
