--- a/education.html
+++ b/education.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Astuti Kumari - Educational Background</title>
+    <title>Unmilan Das - Educational Background</title>
 </head>
 <body>
     <header>
-        <h1>Astuti Kumari</h1>
+        <h1>Unmilan Das</h1>
         <nav>
                           <a href="about.html">About Me</a>
                 <a href="education.html">Educational Background</a>
@@ -27,7 +27,7 @@
 
     <section id="education">
         <h2>Educational Background</h2>
-        <p>Your educational details.</p>
+        <p>Passed out form Mahesh Sri Ramkrishna Ashram Vidyalaya, 90% in english 98% in mathematics in 10th standard. 99% in mathematics, 99% in english , 93% in chemistry , 92% in physics. got 93.6% in 10th standard and 94.6% in 12th standard with state rank 23.</p>
     </section>
 </body>
 </html>
