--- a/membership.html
+++ b/membership.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Astuti Kumari - Membership</title>
+    <title>Unmilan Das - Membership</title>
 </head>
 <body>
     <header>
-        <h1>Astuti Kumari</h1>
+        <h1>Unmilan Das</h1>
         <nav>
                           <a href="about.html">About Me</a>
                 <a href="education.html">Educational Background</a>
