--- a/projects.html
+++ b/projects.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Astuti Kumari - Projects</title>
+    <title>Unmilan Das - Projects</title>
 </head>
 <body>
     <header>
-        <h1>Astuti Kumari</h1>
+        <h1>Unmilan Das</h1>
         <nav>
                            <a href="about.html">About Me</a>
                 <a href="education.html">Educational Background</a>
@@ -27,7 +27,7 @@
 
     <section id="projects">
         <h2>Projects</h2>
-        <p>Details about your projects.</p>
+        <p>certified for gene regulation from Adamas university in 12th standard</p>
     </section>
 </body>
 </html>
