--- a/research.html
+++ b/research.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Astuti Kumari - Research</title>
+    <title>Unmilan Das - Research</title>
 </head>
 <body>
     <header>
-        <h1>Astuti Kumari</h1>
+        <h1>Unmilan Das</h1>
         <nav>
                           <a href="about.html">About Me</a>
                 <a href="education.html">Educational Background</a>
@@ -27,7 +27,7 @@
 
     <section id="research">
         <h2>Research Thrust Area</h2>
-        <p>Your research interests.</p>
+        <p>no research experience , want to research in astronomical field</p>
     </section>
 </body>
 </html>
